--- a/public/views/partials/admin/resource.html
+++ b/public/views/partials/admin/resource.html
@@ -85,7 +85,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close {{valid()}}</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateResource(resource)" ng-if="valid()">Save</button>
                 </div>
             </div>
