--- a/public/views/partials/admin/home.html
+++ b/public/views/partials/admin/home.html
@@ -1,5 +1,3 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
-    <div class="main-content">
-      This is main page
-    </div>
+<div>
+	Nội dung gì đó sẽ để ở trang home
 </div>
