--- a/public/views/partials/admin/gradebook.html
+++ b/public/views/partials/admin/gradebook.html
@@ -9,53 +9,86 @@
     <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#myModal" ng-click="resource = {}" style="float: right;margin-bottom: 10px;">
         <span class="glyphicon glyphicon-plus"></span> Add
     </button>
+
     <div class="main-content">
-        <div class="for-student">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Grade</th>
-                        <th>Note</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="gradebook in gradebooks">
-                        <td ng-bind="gradebook.TITLE"></td>
-                        <td ng-bind="gradebook.GRADE"></td>
-                        <td ng-bind="gradebook.NOTE"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="for-teacher">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Gradebook items</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="item in gradebook_items" ng-click="setGradebookItemId(item.GRADEBOOK_ITEM_ID)">
-                        <td ng-bind="item.TITLE"></td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="gradebook-item-detail">
-                <table class="table table-hover">
-                    <tr>
-                        <th>Name</th>
-                        <th>Grade</th>
-                        <th>Note</th>
-                    </tr>
-                    <tr ng-repeat="student in students">
-                        <td ng-bind="student.NAME"></td>
-                        <td ng-bind="student.GRADE ? student.GRADE : 'N/A'"></td>
-                        <td ng-bind="student.NOTE ? student.NOTE : 'N/A'"></td>
-                    </tr>
-                </table>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Gradebook</h3>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Grade</th>
+                                    <th>Note</th>
+                                </tr>
+                                <tr ng-repeat="gradebook in gradebooks">
+                                    <td ng-bind="gradebook.TITLE"></td>
+                                    <td ng-bind="gradebook.GRADE"></td>
+                                    <td ng-bind="gradebook.NOTE"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            <!-- /.box -->
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Gradebook items</h3>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                                <tr ng-repeat="item in gradebook_items" ng-click="setGradebookItemId(item.GRADEBOOK_ITEM_ID)">
+                                    <td style="font-weight: bold;" ng-bind="item.TITLE"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            <!-- /.box -->
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <!-- /.box-header -->
+                    <div class="box-body table-responsive no-padding">
+                        <table class="table table-hover">
+                            <tbody>
+                                <tr>
+                                <th>Name</th>
+                                <th>Grade</th>
+                                <th>Note</th>
+                            </tr>
+                            <tr ng-repeat="student in students">
+                                <td ng-bind="student.NAME"></td>
+                                <td ng-bind="student.GRADE ? student.GRADE : 'N/A'"></td>
+                                <td ng-bind="student.NOTE ? student.NOTE : 'N/A'"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            <!-- /.box -->
+            </div>
+        </div>
+
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
