--- a/public/views/index_admin.html
+++ b/public/views/index_admin.html
@@ -82,11 +82,11 @@
                             </span>
                         </a>
                         <ul class="treeview-menu collapse slow {{course.temp.e || cid == course.COURSE_CLASS_ID ? 'in' : ''}}">
+                            <li><a href="/sakai/announcement" id="menu{{course.COURSE_CLASS_ID}}-4" ng-click="setCid(course.COURSE_CLASS_ID, 4, course.TITLE)">Announcement</a></li>
                             <li><a href="/sakai/resource" id="menu{{course.COURSE_CLASS_ID}}-0" ng-click="setCid(course.COURSE_CLASS_ID, 0, course.TITLE)">Resource</a></li>
                             <li><a href="/sakai/gradebook" id="menu{{course.COURSE_CLASS_ID}}-1" ng-click="setCid(course.COURSE_CLASS_ID, 1, course.TITLE)">GradeBook</a></li>
                             <li><a href="/sakai/assignment" id="menu{{course.COURSE_CLASS_ID}}-2" ng-click="setCid(course.COURSE_CLASS_ID, 2, course.TITLE)">Assignment</a></li>
-                            <li><a href="/sakai/discussion" id="menu{{course.COURSE_CLASS_ID}}-3" ng-click="setCid(course.COURSE_CLASS_ID, 3, course.TITLE)">Discussion</a></li>
-                            <li><a href="/sakai/announcement" id="menu{{course.COURSE_CLASS_ID}}-4" ng-click="setCid(course.COURSE_CLASS_ID, 4, course.TITLE)">Announcements</a></li>
+                            <li><a href="/sakai/discussion" id="menu{{course.COURSE_CLASS_ID}}-3" ng-click="setCid(course.COURSE_CLASS_ID, 3, course.TITLE)">Discussion</a></li>                            
                         </ul>
                     </li>
 
