--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -1,15 +1,14 @@
 <div>
-    <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAnnouncementModal">
-        <span class="glyphicon glyphicon-plus"></span> Add
-    </button>
 
     <div class="main-content">
-
         <div class="row">
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Announcements</h3>
+                        <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAnnouncementModal" style="float:right">
+                            <span class="glyphicon glyphicon-plus"></span> Add
+                        </button>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body table-responsive no-padding">
@@ -19,6 +18,7 @@
                                     <th>Title</th>
                                     <th>Created by</th>
                                     <th>Date</th>
+                                    <th></th>
                                 </tr>
                                 <tr ng-repeat="announcement in announcements" ng-click="setAnnouncementId(announcement.ANNOUNCEMENT_ID)">
                                     <td ng-bind="announcement.TITLE"></td>
