--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -1,16 +1,17 @@
 <div>
     <div class="main-content">
 
-            <!-- Button trigger modal -->
-        <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAssignmentModal">
-          <span class="glyphicon glyphicon-plus"></span> Add
-        </button>
-
+        
         <div class="row">
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
                         <h3 class="box-title">Assigment</h3>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newAssignmentModal" style="float:right">
+                                <span class="glyphicon glyphicon-plus"></span> Add
+                            </button>
+
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body table-responsive no-padding">
@@ -22,6 +23,7 @@
                                     <th>Created at</th>
                                     <th>Start date</th>
                                     <th>Due date</th>
+                                    <th></th>
                                 </tr>
                                 <tr ng-repeat="assignment in assignments" ng-click="setAssignmentId(assignment.ASSIGNMENT_ID)" style="cursor: pointer;">
                                     <td ng-bind="assignment.TITLE"></td>
